src/test/resources/etapa3/failing/wrongAttrType.ru
struct A {
    B a;
}

impl A {
    .() {}
    fn method_1 () -> void {}
    st fn method_2(Int wala, Str jeje) -> Int {
        ret 1;
    }
}

start {}